force-app/main/default/objects/CommissionRecord__c/fields/AcceptedBy__c.field-meta.xml
<CustomField>
    <fullName>AcceptedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who Accepted the commission record</description>
    <label>Accepted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commission_Records</relationshipName>
    <type>Lookup</type>
</CustomField>