force-app/main/default/objects/CommissionRecord__c/fields/Accounting_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Approved_On__c</fullName>
    <label>Accounting Approved On</label>
    <type>DateTime</type>
</CustomField>