force-app/main/default/objects/CommissionRecord__c/fields/Approved_By_Manager__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manager_Approved_Commission_Records</relationshipName>
    <type>Lookup</type>
</CustomField>