force-app/main/default/objects/CommissionRecord__c/fields/Approved_By_Sales__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Approved_Commission_Records</relationshipName>
    <type>Lookup</type>
</CustomField>