force-app/main/default/objects/CommissionRecord__c/fields/ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who Approved the Commission Record</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commission_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>