force-app/main/default/objects/CommissionRecord__c/fields/AutoAcceptedOn__c.field-meta.xml
<CustomField>
    <fullName>AutoAcceptedOn__c</fullName>
    <label>Auto AcceptedOn</label>
    <type>DateTime</type>
</CustomField>