force-app/main/default/objects/CommissionRecord__c/fields/DisputedBy__c.field-meta.xml
<CustomField>
    <fullName>DisputedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disputed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Disputed_Commission_Records</relationshipName>
    <type>Lookup</type>
</CustomField>