force-app/main/default/objects/CommissionRecord__c/fields/ERP_Order__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP Order</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Commission Records</relationshipLabel>
    <relationshipName>Commission_Records</relationshipName>
    <type>Lookup</type>
</CustomField>