force-app/main/default/objects/CommissionRecord__c/fields/Is_Disputed__c.field-meta.xml
<CustomField>
    <fullName>Is_Disputed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Disputed</label>
    <type>Checkbox</type>
</CustomField>