force-app/main/default/objects/CommissionRecord__c/fields/isComplete__c.field-meta.xml
<CustomField>
    <fullName>isComplete__c</fullName>
    <formula>IF( ISPICKVAL( Stage__c , &#39;Complete&#39;), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isComplete</label>
    <type>Checkbox</type>
</CustomField>