force-app/main/default/objects/CommissionRecord__c/fields/LineItemCount__c.field-meta.xml
<CustomField>
    <fullName>LineItemCount__c</fullName>
    <label>LineItemCount</label>
    <summaryForeignKey>CommissionLineItem__c.CommissionRecord__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>