force-app/main/default/objects/CommissionRecord__c/fields/Sales_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approved_On__c</fullName>
    <label>Sales Approved On</label>
    <type>DateTime</type>
</CustomField>