force-app/main/default/objects/CommissionRecord__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Sales Approval</fullName>
            </value>
            <value>
                <fullName>Pending Manager Approval</fullName>
            </value>
            <value>
                <fullName>Pending Accounting Approval</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Sales Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>