force-app/main/default/objects/CommissionRecord__c/fields/Was_Auto_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Was_Auto_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field gets set to true after the time base auto acceptance has expired</description>
    <label>Was Auto-Accepted</label>
    <type>Checkbox</type>
</CustomField>