force-app/main/default/objects/CommissionRecord__c/fields/Was_Previously_Completed__c.field-meta.xml
<CustomField>
    <fullName>Was_Previously_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This commission record had previous been created, and completely approved.  Something has changed on the opportunity and the record has been recreated</description>
    <label>Was Previously Completed</label>
    <type>Checkbox</type>
</CustomField>